# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  28 Jan 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/files/open-vm-tools-hardened.patch,
  +app-emulation/open-vm-tools/files/open-vm-tools-kernel_stdint-soren.patch
  :
  Fix open-vm-tools kernel detection and build issues with 2.6.24.

  26 Jan 2008; Mike Auty <ikelos@gentoo.org> eclass/vmware-mod.eclass:
  Fix gtkmm with USE=accessibility requirements in vmware-player.

  12 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up pam file installation, bug 205087.

  12 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/files/1.0.0.17-update115-nasty-hack.patch,
  +app-emulation/vmware-modules/files/patches/vmmon/030_all_fix-linux-header
  s.patch, eclass/vmware-mod.eclass:
  Apply the linux header patch to all -r1 ebuilds.
  Remove original 1.0.0.17 ebuild.
  Ensure patches are only applied to -r1 ebuilds.

  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up further ${ROOT} issues pointed out by Jakub.  5;)

  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up $ROOT usage in open-vm-tools.

  06 Jan 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch,
  +app-emulation/vmware-modules/files/1.0.0.17-update115-nasty-hack.patch,
  +app-emulation/vmware-modules/files/patches/vmnet/021_all_wireless_fix.pat
  ch:
  Add in 3 module patches, and put in a temporary hack to build 1.0.0.17 from
  vmware-any-any.

  28 Dec 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/open-vm-tools-hardened.patch:
  Add in hardened patch as an actual fix for bug 200376.

  26 Dec 2007; Mike Auty <ikelos@gentoo.org>