@@ -5,4 +5,6 @@ AUX open-vm.initd 1758 RMD160 49d9bf6d72cce10fc2582e595c4015a827f9f612 SHA1 7497
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2007.11.21-64693.tar.gz 2295022 RMD160 e166040e713f4b7f8fae835862128a7ec3fdca75 SHA1 5b5e8edd726a997e3db0585af010a4be3405cc67 SHA256 b00530bf578b07127880ad3107b2b98873d3e5f74876dd94644bac3883be4431
+DIST open-vm-tools-2008.01.23-74039.tar.gz 2332290 RMD160 b8a78e28abb63f50b5b9f49ad5ebaa727eee4619 SHA1 9d3fb1c2b71533a6d6ee67ee8bbf21edb26e9d59 SHA256 78754c0ab0cb39aad96d80bd1ade4ac2174c4067625d603e2a6afcce6359cace
 EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 3531 RMD160 079ca784ba6c6f7c6707b4af1ffa32962b2fa430 SHA1 7a3e31be3d86b21c4578d0a65397fd0f9dfd1a86 SHA256 7f20e18af90ddbfb597ff559e77d176b13d6c779e73777a5aa5caef1571d6ac9
+EBUILD open-vm-tools-0.0.20080123.74039.ebuild 3531 RMD160 079ca784ba6c6f7c6707b4af1ffa32962b2fa430 SHA1 7a3e31be3d86b21c4578d0a65397fd0f9dfd1a86 SHA256 7f20e18af90ddbfb597ff559e77d176b13d6c779e73777a5aa5caef1571d6ac9
